# KanoopGit

./: CMakeLists.txt  README.md
src/: cloneprogresscallback.cpp  cloneprogresscallback.h  credentialset.cpp  credentialset.h  gitassets.cpp  gitassets.h  gitassets.qrc  gitbranchtreemodel.cpp  gitbranchtreemodel.h  gitbranchtreeview.cpp  gitbranchtreeview.h  gitcommittablemodel.cpp  gitcredentialresolver.cpp  gitcredentialresolver.h  gitdifftableview.cpp  gitentities.cpp  gitentities.h  gitfilesystemtreemodel.cpp  gitfilesystemtreeview.cpp  gitmainwindow.cpp  gitmainwindow.h  gitmainwindow.ui  gitroles.cpp  gitroles.h  gittreeentrytablemodel.cpp  gittreeentrytableview.cpp  gittreeentrytableview.h  kanoopgitsettings.cpp  kanoopgitsettings.h  kanoopgittypes.cpp  kanoopgittypes.h  main.cpp  parentsshawidget.cpp  parentsshawidget.h  recentrepostablemodel.h  recentrepostableview.cpp  repoconfig.cpp  repoconfig.h  repositorycontainer.cpp  repositorycontainer.h  (+17 more)
src/dialogs/: amendcommitmessagedialog.cpp  amendcommitmessagedialog.h  amendcommitmessagedialog.ui  clonerepodialog.cpp  clonerepodialog.h  clonerepodialog.ui  createtagdialog.cpp  createtagdialog.h  createtagdialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  repooptionsdialog.cpp  repooptionsdialog.h  repooptionsdialog.ui
src/modelview/: branchtreemodel.cpp  branchtreemodel.h  branchtreeview.cpp  branchtreeview.h  committablemodel.cpp  committablemodel.h  committableview.cpp  committableview.h  difflinegroup.h  difftablemodel.cpp  difftablemodel.h  difftableview.cpp  difftableview.h  filesystemtreemodel.cpp  filesystemtreemodel.h  filesystemtreeview.cpp  filesystemtreeview.h  gitbranchtreemodel.cpp  gitbranchtreemodel.h  gitbranchtreeview.cpp  gitbranchtreeview.h  gitcommittablemodel.cpp  gitcommittablemodel.h  gitcommittableview.cpp  gitcommittableview.h  gitdifftablemodel.cpp  gitdifftablemodel.h  gitdifftableview.cpp  gitdifftableview.h  gitfilesystemtreemodel.cpp  gitfilesystemtreemodel.h  gitfilesystemtreeview.cpp  gitfilesystemtreeview.h  gitgraphpalette.cpp  gitgraphpalette.h  gittreeentrytablemodel.cpp  gittreeentrytablemodel.h  gittreeentrytableview.cpp  leftsidebartreemodel.cpp  leftsidebartreemodel.h  (+14 more)
src/widgets/: branchlabelwidget.cpp  branchlabelwidget.h  branchtaglabelwidget.cpp  branchtaglabelwidget.h  credentialswidget.cpp  credentialswidget.h  credentialswidget.ui  diffscrollbar.cpp  diffscrollbar.h  localbranchlabelwidget.cpp  localbranchlabelwidget.h  repositorypathwidget.cpp  repositorypathwidget.h  submodulelabelwidget.cpp  submodulelabelwidget.h  testdialog.cpp  testdialog.h  testdialog.ui  toastwidgetcontainer.cpp  toastwidgetcontainer.h
